again fixing titleshadow getting clipped

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -99,48 +99,56 @@ button {
     ;
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .melee {
     background: linear-gradient(to top, #320101, #e20001, #ffbbbc);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .siege {
     background: linear-gradient(to top, #5a4200, #fbc00d, #f4ecb4);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .power {
     background: linear-gradient(to top, #22004a, #7712fb, #d2b4f7);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .decoy {
     background: linear-gradient(to top, #102f11, #00d303, #bef1bd);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .spy {
     background: linear-gradient(to top, #181818, #2b2b2b, #dcdcdc);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .weather {
     background: linear-gradient(to top, #13368c, #2024ec, #9bbdeb);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .king {
     background: linear-gradient(to top, #8e7733, #cbb044, #d2ab17, #f8da2f, #b48c04, #a78722);
     background-clip: text;
     -webkit-background-clip: text;
+    padding: 0 0.1em;
 }
 
 .tilting {
@@ -1202,7 +1210,6 @@ img {
     display: block;
     margin: auto;
     text-align: center;
-    padding: 0.1em; /* need padding so that lettering isn't clipped" */
  }
 
 .card-detail-box {
